--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <!--Buttons-->
     <string name="skip">SKIP</string>
     <string name="finish">FINISH</string>
+    <!--NavigationDrawer Menu-->
+    <string name="navigation_menu_item_1">Item 1</string>
+    <string name="navigation_menu_item_2">Item 2</string>
+    <string name="navigation_menu_item_3">Item 3</string>
+    <string name="navigation_menu_tutorial">Tutorial</string>
+    <string name="open_navigation_drawer">Open</string>
+    <string name="close_navigation_drawer">Close</string>
 </resources>
